# Wajd-Poetry

./: .gitignore  README.md  pyproject.toml  test.txt
.github/workflows/: main.yml  pylint.yml
rp_poetry/: .gitignore  Backward String.py  Backward_String.py  First_Word.py  Rectangle Perimeter.py  Rectangle_Perimeter.py  is_even.py  just fizz.py  just_fizz.py  mult_two.py  password1.py  password2.py  password3.py  password4.py  password5.py  password5.txt
tests/: .gitignore  test_Backward_String.py  test_First_Word.py  test_Rectangle Perimeter.py  test_is_even.py  test_just_fizz.py  test_mult_two.py  test_password1.py  test_password2.py  test_password3.py  test_password4.py
